Translate shortcut descriptions

--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -100,5 +100,12 @@
   },
   "shortcuts": {
     "message": "Ohjaa paneeleja näppäinkomennoilla."
+  },
+
+  "panelise_shortcut_description": {
+    "message": "Tee välilehdestä paneeli"
+  },
+  "depanelise_shortcut_description": {
+    "message": "Tee paneelista välilehti (oltava globaali)"
   }
 }
