--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -100,5 +100,12 @@
   },
   "shortcuts": {
     "message": "Control panels with keyboard shortcuts."
+  },
+
+  "panelise_shortcut_description": {
+    "message": "Turn active tab into a panel"
+  },
+  "depanelise_shortcut_description": {
+    "message": "Turn active panel into a tab; needs to be global"
   }
 }
