Shorten Finnish description. Duh. Release 1.2.1.

--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -6,7 +6,7 @@
     "message": "Panel Tabs"
   },
   "extension_description": {
-    "message": "Avaa välilehtiä Chromen ulkopuolella irrotetuissa tai näytön reunaan kiinnitetyissä paneeleissa. Toimii kuten TV:n kuva kuvassa toiminto, mutta nettisivujen kanssa! Lähdekoodikin on avoin."
+    "message": "Avaa välilehtiä näytön reunaan kiinnitetyissä paneeleissa. Toimii kuten TV:n kuva kuvassa toiminto, mutta netissä! Avoin lähdekoodi."
   },
 
   "setup_heading": {
