Add a toggle action to the context menu.

--- a/source/_locales/es/messages.json
+++ b/source/_locales/es/messages.json
@@ -95,6 +95,9 @@
   "put_back_panel": {
     "message": "Devolver"
   },
+  "toggle_panel": {
+    "message": "Convertir esta en un panel / una pestaña"
+  },
 
   "protip": {
     "message": "ProTip!"
