--- a/source/_locales/fi/messages.json
+++ b/source/_locales/fi/messages.json
@@ -95,6 +95,9 @@
   "put_back_panel": {
     "message": "Laita takaisin"
   },
+  "toggle_panel": {
+    "message": "Siirrä paneeliin/paneelista"
+  },
 
   "protip": {
     "message": "ProVinkki!"
