--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -95,6 +95,9 @@
   "put_back_panel": {
     "message": "Put back"
   },
+  "toggle_panel": {
+    "message": "Toggle panel"
+  },
 
   "protip": {
     "message": "ProTip!"
