Add context menu item to open link in a panel

--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -98,6 +98,9 @@
   "toggle_panel": {
     "message": "Toggle panel"
   },
+  "open_in_panel": {
+    "message": "Open in a panel"
+  },
 
   "protip": {
     "message": "ProTip!"
