--- a/source/_locales/fi/messages.json
+++ b/source/_locales/fi/messages.json
@@ -98,6 +98,9 @@
   "toggle_panel": {
     "message": "Siirrä paneeliin/paneelista"
   },
+  "open_in_panel": {
+    "message": "Avaa paneelissa"
+  },
 
   "protip": {
     "message": "ProVinkki!"
